--- a/.github/workflows/tf_workflow_plan_apply.yml
+++ b/.github/workflows/tf_workflow_plan_apply.yml
@@ -241,9 +241,9 @@ jobs:
       aws_access_key: ${{ secrets.aws_access_key }}
       aws_secret_key: ${{ secrets.aws_secret_key }}
       #PostGres Backend
-      # pg_backend_connection_string: '${{ secrets.pg_backend_connection_string}}'
-      pg_backend_username: '${{ secrets.pg_backend_username }}'
-      pg_backend_password: '${{ secrets.pg_backend_password }}'
+      # pg_backend_connection_string: ${{ secrets.pg_backend_connection_string}}
+      pg_backend_username: ${{ secrets.pg_backend_username }}
+      pg_backend_password: ${{ secrets.pg_backend_password }}
       #GitHub PAT
       github_pat: ${{ secrets.github_pat }}
 
@@ -304,6 +304,14 @@ jobs:
       aws_backend_skip_metadata_api_check: ${{ inputs.aws_backend_skip_metadata_api_check }}
       aws_backend_skip_s3_checksum: ${{ inputs.aws_backend_skip_s3_checksum }}
       aws_backend_use_path_style: ${{ inputs.aws_backend_use_path_style }}
+      #PostGres Backend
+      # pg_backend_host: ${{ inputs.pg_backend_host }}
+      # pg_backend_port: ${{ inputs.pg_backend_port }}
+      # pg_backend_database: ${{ inputs.pg_backend_database }}
+      pg_backend_schema: ${{ inputs.pg_backend_schema }}
+      pg_backend_skip_schema_creation: ${{ inputs.pg_backend_skip_schema_creation }}
+      pg_backend_skip_table_creation: ${{ inputs.pg_backend_skip_table_creation }}
+      pg_backend_skip_index_creation: ${{ inputs.pg_backend_skip_index_creation }}
     secrets:
       #Azure
       azure_tenant_id: ${{ secrets.azure_tenant_id }}
@@ -323,6 +331,10 @@ jobs:
       #S3 Backend
       aws_access_key: ${{ secrets.aws_access_key }}
       aws_secret_key: ${{ secrets.aws_secret_key }}
+      #PostGres Backend
+      # pg_backend_connection_string: ${{ secrets.pg_backend_connection_string}}
+      pg_backend_username: ${{ secrets.pg_backend_username }}
+      pg_backend_password: ${{ secrets.pg_backend_password }}
       #GitHub PAT
       github_pat: ${{ secrets.github_pat }}
     needs: [tf_workflow_plan, checkov_scan]
